--- a/.github/workflows/scan-urlsx.yml
+++ b/.github/workflows/scan-urlsx.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   scan-urls:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -30,3 +31,11 @@ jobs:
           python scan_urlsx.py
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Utilisation du secret GH_TOKEN
+
+      - name: Commit and push changes to README.md
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Mise à jour du README.md avec les nouvelles URLs trouvées" || echo "No changes to commit"
+          git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }} HEAD:main
