--- a/.github/workflows/scan-urlsx.yml
+++ b/.github/workflows/scan-urlsx.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run Python URL scan script
         run: |
-          python scan_urlsx.py
+          python scan_urls.py
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Utilisation du secret GH_TOKEN
 
